Update entrypoint.sh removed working dir as this now does a per file review removed writing to output dir outputting stats to 'output' directory Removed P option replaced with E re-added output to output/checkstyleStats.log Update README.md

--- a/action.yml
+++ b/action.yml
@@ -1,6 +1,6 @@
 # action.yml
 name: 'Run java checkstyle'
-description: 'Run java checkstyle with reviewdog'
+description: 'Run java checkstyle with reviewdog and output statistics for capture elsewhere'
 branding:
   icon: 'code'  
   color: 'red'
@@ -31,15 +31,18 @@ inputs:
   checkstyle_version:
     description: 'Checkstyle version'
     default: '8.40'
-  workdir:
-    description: 'Working directory relative to the root directory.'
-    default: '.'
   tool_name:
     description: 'Tool name to use for reviewdog reporter'
     default: 'reviewdog'
   properties_file:
     description: 'Properties file relative to the root directory.'
     default: ''
+  file_list:
+    description: 'list of files to operate on.'
+    default: ''
+outputs:
+  total_volations:
+    description: total number of violations detected
 runs:
   using: 'docker'
   image: 'Dockerfile'
